@@ -2,6 +2,7 @@
 install fost-web-config :
         mime-types.json
         testserver-d.unix.json
+        testserver-d.windows.json
     :
         <location>$(PREFIX)/Configuration
     ;
