@@ -1,11 +1,12 @@
 /*
-    Copyright 2008-2011 Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2008-2012 Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
 */
 
 
+#include "fost-urlhandler.hpp"
 #include <fost/urlhandler.hpp>
 
 
