@@ -1,5 +1,5 @@
 /*
-    Copyright 2011-2012 Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -7,22 +7,8 @@
 
 
 #ifdef FOST_OS_WINDOWS
-    #define FOST_URLHANDLER_DECLSPEC __declspec( dllimport )
+    #define FOST_URLHANDLER_DECLSPEC __declspec( dllexport )
 #else
     #define FOST_URLHANDLER_DECLSPEC
 #endif
 
-
-#include <fost/urlhandler.hpp>
-
-
-namespace fostlib {
-
-
-    namespace urlhandler {
-
-
-    }
-
-
-}
